--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Page Title</title>
+<link rel="stylesheet" href="design.css">
 </head>
 <body>
 
@@ -49,9 +52,12 @@
   <input type="submit" value="Submit">
 </form> 
 
-<footer>
-  <p>Website designed by Iris Ji<br></p>
-</footer>
+</div> 
+	  <div class="footer-basic">
+        <footer>
+        <p class="copyright">Website designed by Iris Ji</p>
+        </footer>
+</div>
 
 </p>
 
