--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -11,7 +11,7 @@
 <a href="https://covid-19.ontario.ca/book-vaccine/">Visit covid-19.ontario.ca!</a>
 <br>
 <a href="https://covid-19.ontario.ca/book-vaccine/">
-<img src="https://www.ctvnews.ca/polopoly_fs/1.5368153.1617121022!/httpImage/image.jpg_gen/derivatives/landscape_1020/image.jpg" height="300" width="500" alt="COVID-19 vaccine clinic in Ottawa"></a>
+<img src="Image/image.jpg" height="300" width="500" alt="COVID-19 vaccine clinic in Ottawa"></a>
 <br>
 <div class="content">
       <form action="index.php" name="my form" method="POST" autocomplete="on">
