--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Lab1 Questionnaire</title>
-<link rel="stylesheet" href="style/design.css">
+<link rel="stylesheet" href="styles/design.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
 <a href="https://covid-19.ontario.ca/book-vaccine/">Visit covid-19.ontario.ca!</a>
 <br>
 <a href="https://covid-19.ontario.ca/book-vaccine/">
-<img src="Image/image.jpg" height="300" width="500" alt="COVID-19 vaccine clinic in Ottawa"></a>
+<img src="images/image.jpg" height="300" width="500" alt="COVID-19 vaccine clinic in Ottawa"></a>
 <br>
 <div class="content">
       <form action="index.php" name="my form" method="POST" autocomplete="on">
