--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -16,7 +16,7 @@
 <a href="https://covid-19.ontario.ca/book-vaccine/">Visit covid-19.ontario.ca!</a>
 <br>
 <a href="https://covid-19.ontario.ca/book-vaccine/">
-<img src="images/image.jpg" height="300" width="500" alt="COVID-19 vaccine clinic in Ottawa"></a>
+<img src="images/image.jpg" height="300" width="500"></a>
 <br>
 <div class="content">
       <form action="index.php" name="my form" method="POST" autocomplete="on">
