--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -3,16 +3,11 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Lab1 Questionnaire</title>
+<title>Covid-19 Vaccine Appointment</title>
 <link rel="stylesheet" href="styles/design.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body>
-    <p>
-      <a href="#home" class="btn btn-primary" role="button">Home</a>
-      <a href="#about" class="btn btn-primary" role="button">About</a>
-      <a href="#contact" class="btn btn-primary" role="button">Contact</a>
-    </p>
 <a href="https://covid-19.ontario.ca/book-vaccine/">Visit covid-19.ontario.ca!</a>
 <br>
 <a href="https://covid-19.ontario.ca/book-vaccine/">
@@ -58,19 +53,6 @@
 	</div> 
 	  <div class="footer-basic">
         <footer>
-		<div class="social">
-			<a href="#"><i class="icon ion-social-instagram"></i></a>
-			<a href="#"><i class="icon ion-social-snapchat"></i></a>
-			<a href="#"><i class="icon ion-social-twitter"></i></a>
-			<a href="#"><i class="icon ion-social-facebook"></i></a>
-			</div>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">Services</a></li>
-                <li class="list-inline-item"><a href="#">About</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-            </ul>
             <p class="copyright">Website designed by Iris Ji</p>
         </footer>
     </div>
