--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Covid-19 Vaccine Appointment</title>
+	<title><p>Covid-19 Vaccine Appointment</p></title>
 <link rel="stylesheet" href="styles/design.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 </head>
