--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -18,7 +18,7 @@
       <h3><label for="fname"><strong>1.What is your name:</strong></label></h3><br>
       <input type="text" id="fname" name="fname"><br>
       
-  <h3><strong>2.Your gender:</strong></h3>
+  <strong>2.Your gender:</strong>
   <input type="radio" id="male" name="gender" value="male">
   <label for="male">Male</label><br>
   <input type="radio" id="female" name="gender" value="female">
@@ -26,7 +26,7 @@
   <input type="radio" id="other" name="gender" value="other">
   <label for="other">Other</label><br>
        
-  <h3><strong>3.Which area are you living in:<strong></h3>
+  <strong>3.Which area are you living in:<strong>
   <label for="area">Choose an area:</label>
   <select id="area" name="area">
     <option value="Downtown">Downtown</option>
@@ -35,7 +35,7 @@
     <option value="Orleans">Orleans</option>
   </select>
   
-    <h3><strong>4.Did you have any symptoms:</strong></h3>
+  <strong>4.Did you have any symptoms:</strong>
   <input type="checkbox" id="symptom1" name="symptom1" value="fever">
   <label for="symptom1">Fever</label><br>
   <input type="checkbox" id="symptom2" name="symptom2" value="dry cough">
@@ -45,7 +45,7 @@
   <input type="checkbox" id="symptom4" name="symptom4" value="None">
   <label for="symptom4">None</label><br>
   
-  <h3><strong>5.Comments:</strong></h3>
+  <strong>5.Comments:</strong>
   <textarea name="message" rows="10" cols="30"></textarea><br>
   
   <input type="submit" value="Submit">
