--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title><p>Covid-19 Vaccine Appointment</p></title>
+<title>Covid-19 Vaccine Appointment</title>
 <link rel="stylesheet" href="styles/design.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body>
-	<h2>Covid-19 Vaccine Appointment</h2>
+<h1>Covid-19 Vaccine Appointment</h1>
 <a href="https://covid-19.ontario.ca/book-vaccine/">Visit covid-19.ontario.ca!</a>
 <br>
 <a href="https://covid-19.ontario.ca/book-vaccine/">
