--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -16,7 +16,7 @@
 <br>
 <div class="content">
       <form action="index.php" name="my form" method="POST" autocomplete="on">
-      <h3><label for="fname"><strong>1.What is your name:</strong></label></h3><br>
+      <label for="fname"><strong>1.What is your name:</strong></label><br>
       <input type="text" id="fname" name="fname"><br>
       
   <strong>2.Your gender:</strong>
