--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -19,7 +19,7 @@
       <label for="fname"><strong>1.What is your name:</strong></label><br>
       <input type="text" id="fname" name="fname"><br>
       
-  <strong>2.Your gender:</strong>
+  <strong>2.Your gender:</strong><br>
   <input type="radio" id="male" name="gender" value="male">
   <label for="male">Male</label><br>
   <input type="radio" id="female" name="gender" value="female">
@@ -27,14 +27,14 @@
   <input type="radio" id="other" name="gender" value="other">
   <label for="other">Other</label><br>
        
-  <strong>3.Which area are you living in:<strong>
+  <strong>3.Which area are you living in:<strong><br>
   <label for="area">Choose an area:</label>
   <select id="area" name="area">
     <option value="Downtown">Downtown</option>
     <option value="Kanata">Kanata</option>
     <option value="Barrhaven">Barrhaven</option>
     <option value="Orleans">Orleans</option>
-  </select>
+  </select><br>
   
   <strong>4.Did you have any symptoms:</strong>
   <input type="checkbox" id="symptom1" name="symptom1" value="fever">
