--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -36,7 +36,7 @@
     <option value="Orleans">Orleans</option>
   </select><br>
   
-  <strong>4.Did you have any symptoms:</strong>
+  <strong>4.Did you have any symptoms:</strong><br>
   <input type="checkbox" id="symptom1" name="symptom1" value="fever">
   <label for="symptom1">Fever</label><br>
   <input type="checkbox" id="symptom2" name="symptom2" value="dry cough">
