--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -25,7 +25,7 @@
   <input type="radio" id="female" name="gender" value="female">
   <label for="female">Female</label><br>
   <input type="radio" id="other" name="gender" value="other">
-  <label for="other">Other</label><br>
+  <label for="other">Other</label><br><br>
        
   <strong>3.Which area are you living in:<strong><br>
   <label for="area">Choose an area:</label>
@@ -34,7 +34,7 @@
     <option value="Kanata">Kanata</option>
     <option value="Barrhaven">Barrhaven</option>
     <option value="Orleans">Orleans</option>
-  </select><br>
+  </select><br><br>
   
   <strong>4.Did you have any symptoms:</strong><br>
   <input type="checkbox" id="symptom1" name="symptom1" value="fever">
@@ -44,7 +44,7 @@
   <input type="checkbox" id="symptom3" name="symptom3" value="tiredness">
   <label for="symptom3">Tiredness</label><br>
   <input type="checkbox" id="symptom4" name="symptom4" value="None">
-  <label for="symptom4">None</label><br>
+  <label for="symptom4">None</label><br><br>
   
   <strong>5.Comments:</strong>
   <textarea name="message" rows="10" cols="30"></textarea><br>
