--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -46,10 +46,10 @@
   <input type="checkbox" id="symptom4" name="symptom4" value="None">
   <label for="symptom4">None</label><br><br>
   
-  <strong>5.Comments:</strong>
+  <strong>5.Comments:</strong><br>
   <textarea name="message" rows="10" cols="30"></textarea><br>
   
-  <input type="submit" value="Submit">
+  <input type="submit" value="Submit"><br>
 	  </form>
 	</div> 
 	  <div class="footer-basic">
