--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -21,8 +21,8 @@
 	Choose a Category:
 	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">
 	<option value=""></option>
-	<option value="Vegetarian">Vegetarian</option>
-    <option value="GlutenFree">GlutenFree</option>
+	<option value="Lactose-intolerant">lactose_intolerant</option>
+    <option value="Nuts allergic">nuts_allergic</option>
     <option value="None">None</option>
 	</select>
 </div>
