--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -7,6 +7,8 @@
 
 <body>
 
+<div class="shop">Grocery Site</div>
+
 <!-- Tab links, each one with an onclick event associated with it -->
 <div class="tab">
   <button class="tablinks" onclick="openInfo(event, 'Client')">Client</button>
