--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<div class="shop">Grocery Site</div>
+<h1>Grocery Site</h1>
 
 <!-- Tab links, each one with an onclick event associated with it -->
 <div class="tab">
