--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -23,11 +23,11 @@
 	Choose a Category:
 	<br>
   <input type="checkbox" id="symptom1" name="symptom1" value="lactosefree">
-  <label for="symptom1">Fever</label><br>
+  <label for="symptom1">lactosefree</label><br>
   <input type="checkbox" id="symptom2" name="symptom2" value="nutallergy">
-  <label for="symptom2">Dry cough</label><br>
+  <label for="symptom2">nutallergy</label><br>
   <input type="checkbox" id="symptom3" name="symptom3" value="vegetarian">
-  <label for="symptom3">Tiredness</label><br>
+  <label for="symptom3">vegetarian</label><br>
   <input type="checkbox" id="symptom4" name="symptom4" value="None">
   <label for="symptom4">None</label><br><br>
 </div>
