--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -50,6 +50,10 @@
 
 <script src="scripts/groceries.js"></script>
 <script src="scripts/main.js"></script>
+	
+<footer>
+            <p class="copyright">Website designed by Iris Ji</p>
+        </footer>
 
 </body>
 </html>
