--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -22,13 +22,13 @@
   <p>Tell us a bit about you.</p>
 	Choose a Category:
 	<br>
-  <input type="radio" id="symptom1" name="symptom1" value="lactosefree" onchange="populateListProductChoices(this.id, 'displayProduct')>
+  <input type="radio" id="symptom1" name="symptom1" value="lactosefree">
   <label for="symptom1">lactosefree</label><br>
-  <input type="radio" id="symptom2" name="symptom2" value="nutallergy" onchange="populateListProductChoices(this.id, 'displayProduct')>
+  <input type="radio" id="symptom2" name="symptom2" value="nutallergy">
   <label for="symptom2">nutallergy</label><br>
-  <input type="radio" id="symptom3" name="symptom3" value="vegetarian" onchange="populateListProductChoices(this.id, 'displayProduct')>
+  <input type="radio" id="symptom3" name="symptom3" value="vegetarian">
   <label for="symptom3">vegetarian</label><br>
-  <input type="radio" id="symptom4" name="symptom4" value="None" onchange="populateListProductChoices(this.id, 'displayProduct')>
+  <input type="radio" id="symptom4" name="symptom4" value="None">
   <label for="symptom4">None</label><br><br>
 </div>
 
