--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -21,15 +21,13 @@
   <h3>Client Information</h3>
   <p>Tell us a bit about you.</p>
 	Choose a Category:
-	<br>
-  <input type="radio" id="symptom1" name="symptom1" value="lactosefree">
-  <label for="symptom1">lactosefree</label><br>
-  <input type="radio" id="symptom2" name="symptom2" value="nutallergy">
-  <label for="symptom2">nutallergy</label><br>
-  <input type="radio" id="symptom3" name="symptom3" value="vegetarian">
-  <label for="symptom3">vegetarian</label><br>
-  <input type="radio" id="symptom4" name="symptom4" value="None">
-  <label for="symptom4">None</label><br><br>
+	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">
+	<option value=""></option>
+	<option value="lactosefree">lactosefree</option>
+        <option value="nutallergy">nutallergy</option>
+	<option value="vegetarian">vegetarian</option>
+        <option value="None">None</option>
+	</select>
 </div>
 
 <div id="Products" class="tabcontent">
