--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -23,10 +23,10 @@
 	Choose a Category:
 	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">
 	<option value=""></option>
-	<option value="lactosefree">lactosefree</option>
-        <option value="nutallergy">nutallergy</option>
+	<option value="lactose_intolerant">lactose_intolerant</option>
+        <option value="nuts_allergic">nuts_allergic</option>
 	<option value="vegetarian">vegetarian</option>
-        <option value="None">None</option>
+    <option value="None">None</option>
 	</select>
 </div>
 
