--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -44,6 +44,9 @@
   <h3>Cart</h3>
   <p>Here is your cart.</p>
   <div id="displayCart"></div>
+	<button id="complete" type="button" class="button order" >
+		Complete Order
+	</button>
 </div>
 
 <script src="scripts/groceries.js"></script>
