--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-
+<h1>Gorocery</h1>
 <!-- Tab links, each one with an onclick event associated with it -->
 <div class="tab">
   <button class="tablinks" onclick="openInfo(event, 'Client')">Client</button>
