--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -23,7 +23,7 @@
 	<option value=""></option>
 	<option value="lactose_intolerant">lactose_intolerant</option>
     <option value="nuts_allergic">nuts_allergic</option>
-	<option value="vegetarian">nuts_allergic</option>
+	<option value="vegetarian">vegetarian</option>
     <option value="None">None</option>
 	</select>
 </div>
