--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -47,5 +47,6 @@
 <script src="scripts/groceries.js"></script>
 <script src="scripts/main.js"></script>
 
+	<footer class="sig">Designed by Iris Ji 300061354</footer>
 </body>
 </html>
