--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -11,7 +11,7 @@ This will help you get started with your code!
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
-    <title>Module 4 Lab</title>
+    <title>Veterinary business</title>
 </head>
 <body>
 <!--
@@ -25,8 +25,9 @@ Many websites will use what is called CSS grid layouts, where you will have a he
     The example I give is quite simple with a logo and some text, but you can use it for many navigational patterns
     https://getbootstrap.com/docs/5.0/components/navbar/
     -->
+    <div class="p-3 mb-2 bg-warning text-dark">.bg-warning</div>
 
-    <nav class="navbar bg-dark text-white p-3 my-3 ">
+    <nav class="navbar bg-info text-white p-3 my-3 ">
         <h1><img src="images/petLogo.jpg" width="130" height="130"> Welcome to my Physiotherapy Clinic</h1>
     </nav>
 
