--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -28,7 +28,7 @@ Many websites will use what is called CSS grid layouts, where you will have a he
     <div class="p-3 mb-2 bg-warning text-dark">State of emergency declared. See COVID-19 updates and check for location, program and service closures, cancellations and changes.</div>
 
     <nav class="navbar bg-info text-white p-3 my-3 ">
-        <h1><img src="images/petLogo.jpg" width="130" height="130"> Welcome to my Pet Clinic</h1>
+        <h1><img src="images/petLogo.jpg" width="130" height="130"> Welcome to my Pet Clinicヽ(=^･ω･^=)丿</h1>
     </nav>
 
     <div class=" p-3 my-3 border bg-light">
