--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -184,12 +184,12 @@ Many websites will use what is called CSS grid layouts, where you will have a he
     <h1>More Information</h1>
 
     <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        Button To Expand Options
+        Any questions to us?
     </button>
 
     <div class="collapse" id="collapseExample">
         <div class="card card-body">
-            Here we have some hidden data to avoid cluttering the page with information
+           please enter your <strong>questions</strong>
         </div>
     </div>
 
