--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -114,6 +114,28 @@ Many websites will use what is called CSS grid layouts, where you will have a he
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 	
+	    <table class="table table-info table-hover">
+        <thead>
+            <tr>
+                <th scope="col"><h2>Service</h2></th>
+                <th scope="col"><h2>Description</h2></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Placeholder 1</td>
+                <td>Placeholder 2</td>
+            </tr>
+            <tr>
+                <td>Placeholder 1</td>
+                <td>Placeholder 2</td>
+            </tr>
+            <tr>
+                <td>Placeholder 1</td>
+                <td>Placeholder 2</td>
+            </tr>
+        </tbody>
+    </table>
 	    <!-- Cards are quite useful when building a website. They are a useful way to organize information.
     They can be organized using a CSS grid or other layout options.
     https://getbootstrap.com/docs/5.0/components/card/
