--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -162,7 +162,14 @@ Many websites will use what is called CSS grid layouts, where you will have a he
                 <p class="card-text">Dr. Amy Robert</p>
             </div>
         </div>
-    </div>
+        <div class="card" style="width: 18rem;">
+            <img src="images/doctor03.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Dr. Mary Green</p>
+            </div>
+        </div>
+		</div>
+
 
     <h1>Feedback</h1>
 
