--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -13,6 +13,20 @@ This will help you get started with your code!
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
     <title>Veterinary business</title>
 </head>
+<style>
+.button {
+    background-color: #003300;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+</style>
 <body>
 <!--
 I store all of the page information in a container,
@@ -172,27 +186,16 @@ Many websites will use what is called CSS grid layouts, where you will have a he
 		</div>
 		<br>
 
-	<div class="container" id="third">
+
     <h1><img src="images/appointment.png" alt="logo" style="width:50px;">Make an appointment!<img src="images/icon6.png" alt="logo" style="width:50px;"></h1>
-	<p>Your name: <input value="" id="name" type="text"></p>
-	<p>Your pet's name: <input value="" id="petname" type="text"></p>
-    <p>Book date:</p><p><input type="date" id="start" name="trip-start"
-       value="2021-06-20"
-       min="2018-01-01" max="2099-12-31"></p>
-    <p>Phone Number: <input value="" type="text" id="phone"></p>
-    <p>Credit Card: </p><p><input type="text" id="debit" title="We ask for your credit card number in case of no-show, 20$ will be charged."></p>
-</div>
-
-
-    <h1><img src="images/feedback.png" alt="logo" style="width:50px;">Feedback</h1>
 
     <!-- Button trigger modal
     We use the same button code from above, but now we can trigger a modal to appear.
     The bootstrap tutorial includes many different types of modals that you can explore
     https://getbootstrap.com/docs/5.0/components/modal/
     -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Contact us
+    <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Make an appointment!
     </button>
 
     <!-- Modal -->
@@ -200,7 +203,7 @@ Many websites will use what is called CSS grid layouts, where you will have a he
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+        <h5 class="modal-title" id="exampleModalLabel"><img src="images/appointment.png" alt="logo" style="width:50px;">Make an appointment!<img src="images/icon6.png" alt="logo" style="width:50px;"></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -208,8 +211,18 @@ Many websites will use what is called CSS grid layouts, where you will have a he
       <div class="modal-body">
         <form>
           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Recipient:</label>
+            <label for="name" class="col-form-label">Your name:</label>
             <input type="text" class="form-control" id="recipient-name">
+          </div>
+		  <div class="form-group">
+            <label for="petname" class="col-form-label">Your pet's name:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+		  <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Book date:</label>
+            <input type="date" id="start" name="trip-start"
+       value=""
+       min="2018-01-01" max="2099-12-31"></p>
           </div>
           <div class="form-group">
             <label for="message-text" class="col-form-label">Message:</label>
@@ -230,7 +243,7 @@ Many websites will use what is called CSS grid layouts, where you will have a he
     We can also use buttons to expand some hidden options
     https://getbootstrap.com/docs/5.0/components/collapse/
     -->
-    <h1>More Information</h1>
+    <h1><img src="images/feedback.png" alt="logo" style="width:50px;">More Information</h1>
 
     <!-- This example is using what is called an accordian, this is one of three examples
     https://getbootstrap.com/docs/5.0/components/accordion/
@@ -269,7 +282,7 @@ Many websites will use what is called CSS grid layouts, where you will have a he
         </div>
     </div>
 	
-	<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+	<button class="button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         Any questions to us?
     </button>
 
