--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -260,9 +260,14 @@ Many websites will use what is called CSS grid layouts, where you will have a he
           </div>
 		  <div class="form-group">
             <label for="email">Enter your email:</label>
-
-<input type="email" id="email"
+			<input type="email" id="email"
        pattern=".+@globex\.com" size="30" required>
+          </div>
+		  		  <div class="form-group">
+            <label for="phone">Enter your phone number:</label>
+			<input type="tel" id="phone" name="phone"
+       pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+       required>
           </div>
           <div class="form-group">
             <label for="message-text" class="col-form-label">Message:</label>
