--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -269,6 +269,27 @@ Many websites will use what is called CSS grid layouts, where you will have a he
        pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
        required>
           </div>
+
+          <div class="col-50">
+            <label for="cname">Name on Card</label>
+            <input type="text" id="cname" name="cardname" placeholder="Your name on card">
+            <label for="ccnum">Credit card number</label>
+            <input type="text" id="ccnum" name="cardnumber" placeholder="xxxx-xxxx-xxxx-xxxx">
+            <label for="expmonth">Exp Month</label>
+            <input type="text" id="expmonth" name="expmonth" placeholder="September">
+
+            <div class="row">
+              <div class="col-50">
+                <label for="expyear">Exp Year</label>
+                <input type="text" id="expyear" name="expyear" placeholder="2018">
+              </div>
+              <div class="col-50">
+                <label for="cvv">CVV</label>
+                <input type="text" id="cvv" name="cvv" placeholder="352">
+              </div>
+            </div>
+          </div>
+
           <div class="form-group">
             <label for="message-text" class="col-form-label">Message:</label>
             <textarea class="form-control" id="message-text"></textarea>
